# xautoclick

./: .cvsignore  .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile  README  README.md  clicker.c  clicker.h  clickwidget.cpp  clickwidget.h  configure  gui.c  gui.h  guiascii.c  guicommandline.c  guifltk.cpp  guigtk1.c  guigtk2.c  guigtk3.c  guiqt.cpp  guiqt3.cpp  guiqt3.h  guiqt4.cpp  guiqt4.h  license.h  main.c  main.h  options.c  options.h  osdep.c  osdep.h  udevclicker.c  udevclicker.h  x11clicker.c  x11clicker.h  xautoclick.1  xautoclick.desktop
.github/workflows/: build.yml  codeql-analysis.yml
xautoclick/: AUTHORS  ChangeLog  INSTALL  LICENSE  Makefile  README  configure  guiascii.c  guicommandline.c  guifltk.cpp  guigtk1.c  guiqt3.cpp  guiqt4.cpp  guiqt4.h  license.h  main.c  main.h  osdep.c  osdep.h  xautoclick.1
